# moos-ivp-jzli

missions/alder/: alder.moos
missions/lab_05/: prime.moos
missions/lab_08/alpha_bravo_pshare/: alpha.bhv  bravo.bhv  bravo.moos  launch.sh  shoreside.moos
missions/lab_08/alpha_pshare/: alpha.moos  shoreside.moos
missions/lab_08/henry_gilda_auto_refuel/: .LastOpenedMOOSLogDirectory  meta_shoreside.moos  meta_vehicle.bhv  targ_shoreside.moos
missions/lab_08/henry_gilda_baseline/: .LastOpenedMOOSLogDirectory  targ_shoreside.moos
missions/lab_08/henry_gilda_refuel/: meta_shoreside.moos  meta_vehicle.bhv
missions/nelson/AvdColregsV19_random_speed/: #my_vehicle.moos#  alogcd.txt  analysis.sh  launch.sh  launch2.sh  meta_shoreside.moos  meta_vehicle.bhv  my_vehicle.bhv  my_vehicle.moos  my_vehicle2.bhv  plug_pBasicContactMgr.moos  plug_pLogger.moos  startpolygons.txt  vpositions.txt  vspeeds.txt  xlaunch.sh  xlaunch2.sh
missions/nelson/avoidcol_random_speed/: analysis.sh  example  example.cpp  launch.sh  meta_shoreside.moos  my_vehicle.bhv  plug_pBasicContactMgr.moos  startpolygons.txt  vspeeds.txt
missions/nelson/baseline/: .LastOpenedMOOSLogDirectory  launch.sh  meta_shoreside.moos  meta_vehicle.bhv  my_vehicle.bhv  my_vehicle.moos  plug_uSimMarine.moos  targ_alpha.moos  targ_bravo.moos  targ_charlie.moos  targ_delta.bhv  targ_delta.moos  targ_nelson.moos  targ_shoreside.moos
missions/nelson/colregs_random_speed/: #meta_shoreside.moos#  launch.sh  meta_shoreside.moos  meta_shoreside.moos~  (+4 more)
src/: CMakeLists.txt
src/lib_behaviors-test/: BHV_DensityCount.cpp  BHV_DensityCount.h  CMakeLists.txt
src/lib_density/: #CMakeLists.txt#  .#CMakeLists.txt  CMakeLists.txt  DC_V1.cpp  DC_V2.cpp  DensityCounter.cpp  DensityCounter.h
src/pOdometry/: .#Odometry.cpp  CMakeLists.txt  Odometry.cpp  Odometry.h  Odometry_Info.cpp  Odometry_Info.h  main.cpp
src/pPrimeFactor/: CMakeLists.txt  PrimeEntry.cpp  PrimeEntry.h  PrimeFactor.cpp  PrimeFactor.h  PrimeFactor_Info.cpp  PrimeFactor_Info.h  main.cpp
src/pTrafficDensity/: CMakeLists.txt  TrafficDensity.cpp  TrafficDensity.cpp~  TrafficDensity.h  TrafficDensity_Info.cpp  TrafficDensity_Info.h  main.cpp  pTrafficDensity.moos
(+561 files in other folders)
